Code changes for Blob, Queue, servicebus and eventhub validators

--- a/DiagnosticAnalysisLauncher/DiagnosticAnalysisLauncher.csproj
+++ b/DiagnosticAnalysisLauncher/DiagnosticAnalysisLauncher.csproj
@@ -35,7 +35,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DaaS">
-      <HintPath>..\DaaS\bin\Release\DaaS.dll</HintPath>
+      <HintPath>..\DaaS\bin\Debug\DaaS.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DaaS\bin\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,20 +59,19 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>11.0.2</Version>
+      <Version>13.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.DiagnosticAnalysis.Windows" GeneratePathProperty="true">
       <Version>17.2.1012110</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-   <Content Include="$(PkgMicrosoft_VisualStudio_DiagnosticAnalysis_Windows)\content\**\*">
+    <Content Include="$(PkgMicrosoft_VisualStudio_DiagnosticAnalysis_Windows)\content\**\*">
       <Link>DiagnosticAnalysis\%(RecursiveDir)%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-   </Content>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
