--- a/DiagnosticsExtension/DiagnosticsExtension.csproj
+++ b/DiagnosticsExtension/DiagnosticsExtension.csproj
@@ -400,6 +400,7 @@
     <Compile Include="Models\ConnectionStringValidator\ServiceBusValidator.cs" />
     <Compile Include="Models\ConnectionStringValidator\MySqlValidator.cs" />
     <Compile Include="Models\ConnectionStringValidator\SqlServerValidator.cs" />
+    <Compile Include="Models\ConnectionStringValidator\StorageValidator.cs" />
     <Compile Include="Models\LogsSettings.cs" />
     <Compile Include="Models\MsiValidatorModels.cs" />
     <Compile Include="Models\SasUriResponse.cs" />
@@ -455,9 +456,9 @@
     <Content Include="Content\themes\base\jquery-ui.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="..\packages\Microsoft.VisualStudio.DiagnosticAnalysis.ResultsViewer.1.0.1847.37\content\**\*" >
-       <Link>DiagnosticAnalysis\%(RecursiveDir)%(Filename)%(Extension)</Link>
-       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="..\packages\Microsoft.VisualStudio.DiagnosticAnalysis.ResultsViewer.1.0.1847.37\content\**\*">
+      <Link>DiagnosticAnalysis\%(RecursiveDir)%(Filename)%(Extension)</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="scmApplicationHost.xdt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
